# sdl2-mixer

./: README.md  sdl2-mixer.cabal
.github/workflows/: cabal.yml  lint.yml
examples/: BasicRaw.hs  Effect.hs  Jumbled.hs
src/SDL/: Mixer.hs
src/SDL/Raw/: Helper.hs  Mixer.hsc
